chore: improve readability

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build-renderer": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.renderer.prod.babel.js --colors",
     "build-preload": "cross-env NODE_ENV=production webpack --config ./configs/webpack.config.preload.babel.js --colors",
     "dev": "concurrently \"cross-env START_HOT=1 yarn start-renderer-dev\" \"yarn start-preload-dev\"",
-    "dev:mainnet": "concurrently \"cross-env START_HOT=1 STX_NETWORK=mainnet yarn start-renderer-dev\" \"yarn start-preload-dev\"",
-    "dev:testnet": "concurrently \"cross-env START_HOT=1 STX_NETWORK=testnet yarn start-renderer-dev\" \"yarn start-preload-dev\"",
+    "dev:mainnet": "STX_NETWORK=mainnet concurrently \"cross-env START_HOT=1 STX_NETWORK=mainnet yarn start-renderer-dev\" \"yarn start-preload-dev\"",
+    "dev:testnet": "STX_NETWORK=testnet concurrently \"cross-env START_HOT=1 STX_NETWORK=testnet yarn start-renderer-dev\" \"yarn start-preload-dev\"",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
     "lint:eslint": "eslint \"app/**/*.{ts,tsx}\"",
     "package": "yarn build && electron-builder build --publish never",
